# platitudes

./: .gitignore  CNAME  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: static.yml
docs/: config_file_defaults.md  envvars.md  extended_example.md  funky_idioms.md  index.md  positional_vs_optional_parameters.md  quick_start_guide.md
docs/api/: argument.md  exit.md  platitudes.md  run.md
docs/types/: bool.md  datetime.md  enum.md  numbers.md  path.md  str.md  uuid.md
example/: examples.py  extended_example.py  hello_world.py  readme_example.py
example/doc_examples/: bool_01.py  bool_02.py  bool_03.py  datetime_example.py  datetime_usa_example.py  enum_example.py  envvar_01.py  hello_world.py  int_example.py  magic_config.py  magic_config_01.json  magic_config_01.py  path_example.py  uuid_example.py
platitudes/: __init__.py  actions.py  argument.py  errors.py  platitudes.py
site/: 404.html  index.html  sitemap.xml
site/quick_start_guide/: index.html
site/search/: search_index.json
test/: test_cmdline.py  test_internals.py
